# rust-15-puzzle

./: Cargo.toml
src/: main.rs  puzzle15.rs
